# hotel-booking-drf

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/apps/booking/: models.py  serializers.py  tests.py  urls.py  views.py
src/apps/booking/migrations/: 0001_initial.py  0002_remove_booking_total_price.py
src/apps/rooms/: models.py  serializers.py  tests.py  urls.py  views.py
src/apps/rooms/migrations/: 0001_initial.py
src/core/: settings.py  urls.py
src/core/core/: settings.py
